Update: GitHub Actions Tests